Committing Checkov Workflows folder

--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -20,7 +20,7 @@ jobs:
           directory: .
           framework: terraform
       - name: Create Pull Request
-        if: steps.checkov.outputs.failed == 'failure'
+        if: steps.checkov.outputs.failed == 'true'
         uses: peter-evans/create-pull-request@v3
         with:
           title: Checkov scan failed
