Committing Checkov Workflows folder

--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -20,7 +20,10 @@ jobs:
           directory: .
           framework: terraform
       - name: Print Checkov Outputs
-        run: echo "${{ toJson(steps.checkov.outputs) }}"
+        uses: actions/github-script@v4
+        with:
+            script: |
+             console.log(JSON.stringify(steps.checkov.outputs));
       - name: Create Pull Request
         if: steps.checkov.outputs.failed == 'true'
         uses: peter-evans/create-pull-request@v3
