--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -19,18 +19,6 @@ jobs:
         with:
           directory: .
           framework: terraform
-      - name: Print Checkov Outputs
-        uses: actions/github-script@v4
-        with:
-            script: |
-             console.log(JSON.stringify(steps.checkov.outputs));
-      - name: Create Pull Request
-        if: steps.checkov.outputs.failed == 'true'
-        uses: peter-evans/create-pull-request@v3
-        with:
-          title: Checkov scan failed
-          commit-message: Checkov scan failed
-          branch: checkov-failed
-          body: |
-            The Checkov scan detected potential security issues in the Terraform code. Please review the changes and make any necessary fixes.
-          token: ${{ secrets.CHECKOV_PR_TOKEN }}
+      - name: Notify on Checkov Failure
+        if: steps.checkov.outputs.failed == true
+        run: echo "Checkov scan failed"
