--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -21,4 +21,5 @@ jobs:
           directory: .
           framework: terraform
       - name: Notify on Checkov Failure
+        if: steps.checkov.outputs.num_failed > 0
         run: echo "Checkov scan failed"
