--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -33,4 +33,4 @@ jobs:
             body: |
               The Checkov scan detected the following potential security issues in the Terraform code:
               $(checkov -d /path/to/terraform/directory -o json | jq -r '.results[] | select(.status == "FAILED") | "- " + .check_id + ": " + .check_name')
-            token: ${{ secrets.GITHUB_TOKEN }}
+            token: ${{ secrets.CHECKOV_PR_TOKEN }}
