--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -20,9 +20,8 @@ jobs:
         with:
           directory: .
           framework: terraform
-      - name: Notify on Checkov Failure
-        if: steps.checkov.outputs.num_failed > 0
-        run: echo "Checkov scan failed"
+      - name: Print Checkov Outputs
+        run: echo "${{ toJSON(steps.checkov.outputs) }}"  
       - name: Create Pull Request
         if: steps.checkov.outputs.num_failed > 0
         uses: peter-evans/create-pull-request@v3
