--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -21,7 +21,7 @@ jobs:
           directory: .
           framework: terraform
       - name: Print Checkov Outputs
-        run: echo "${{ steps.checkov.outputs | tojson }}"
+        run: echo "${{ toJson(steps.checkov.outputs) }}"
       - name: Create Pull Request
         if: steps.checkov.outputs.num_failed > 0
         uses: peter-evans/create-pull-request@v3
