Committing Checkov Workflows folder

--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -21,7 +21,7 @@ jobs:
           directory: .
           framework: terraform
         env:
-          checkov-results: '${{fromJson(steps.checkov.outputs.checkov_results)}}'
+          checkov-results: "${{fromJson(steps.checkov.outputs.checkov_results)}}""
       - name: Print Checkov Outputs
         run: echo "${{ steps.checkov.outputs.checkov_results }}" | jq .
       - name: Create Pull Request
