--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -24,14 +24,14 @@ jobs:
           checkov-results: "${{fromJson(steps.checkov.outputs.checkov_results)}}"
       - name: Print Checkov Outputs
         run: echo "${{ steps.checkov.outputs.checkov_results }}" | jq .
-      - name: Create Pull Request
-        if: steps.checkov.outputs.num_failed > 0
-        uses: peter-evans/create-pull-request@v3
-        with:
-            title: Checkov scan failed
-            commit-message: Checkov scan failed
-            branch: checkov-failed
-            body: |
-              The Checkov scan detected the following potential security issues in the Terraform code:
-              $(checkov -d /path/to/terraform/directory -o json | jq -r '.results[] | select(.status == "FAILED") | "- " + .check_id + ": " + .check_name')
-            token: ${{ secrets.CHECKOV_PR_TOKEN }}
+    #   - name: Create Pull Request
+    #     if: steps.checkov.outputs.num_failed > 0
+    #     uses: peter-evans/create-pull-request@v3
+    #     with:
+    #         title: Checkov scan failed
+    #         commit-message: Checkov scan failed
+    #         branch: checkov-failed
+    #         body: |
+    #           The Checkov scan detected the following potential security issues in the Terraform code:
+    #           $(checkov -d /path/to/terraform/directory -o json | jq -r '.results[] | select(.status == "FAILED") | "- " + .check_id + ": " + .check_name')
+    #         token: ${{ secrets.CHECKOV_PR_TOKEN }}
