Committing Checkov Workflows folder

--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -2,36 +2,28 @@ name: Checkov
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
 jobs:
-  build:
+  scan:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
+      - uses: actions/checkout@v3
+
+      - name: Checkov GitHub Action
+        uses: bridgecrewio/checkov-action@v12
         with:
-          python-version: 3.8
-      - name: Test with Checkov
-        id: checkov
-        continue-on-error: true
-        uses: bridgecrewio/checkov-action@master
+          # This will add both a CLI output to the console and create a results.sarif file
+          output_format: cli,sarif
+          output_file_path: console,results.sarif
+        
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        
+        # Results are generated only on a success or failure
+        # this is required since GitHub by default won't run the next step
+        # when the previous one has failed. Security checks that do not pass will 'fail'.
+        # An alternative is to add `continue-on-error: true` to the previous step
+        # Or 'soft_fail: true' to checkov.
+        if: success() || failure()
         with:
-          directory: .
-          framework: terraform
-        env:
-          checkov-results: "${{fromJson(steps.checkov.outputs.checkov_results)}}"
-      - name: Print Checkov Outputs
-        run: echo "${{ steps.checkov.outputs.checkov_results }}" | jq .
-    #   - name: Create Pull Request
-    #     if: steps.checkov.outputs.num_failed > 0
-    #     uses: peter-evans/create-pull-request@v3
-    #     with:
-    #         title: Checkov scan failed
-    #         commit-message: Checkov scan failed
-    #         branch: checkov-failed
-    #         body: |
-    #           The Checkov scan detected the following potential security issues in the Terraform code:
-    #           $(checkov -d /path/to/terraform/directory -o json | jq -r '.results[] | select(.status == "FAILED") | "- " + .check_id + ": " + .check_name')
-    #         token: ${{ secrets.CHECKOV_PR_TOKEN }}
+          sarif_file: results.sarif
