--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -1,14 +1,18 @@
 name: Checkov
 
 on:
-  push:
+  pull_request:
     branches: ["main"]
+    types: [opened, synchronize, reopened]
 
 jobs:
   scan:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install Octokit
+        run: npm install @octokit/rest
 
       - name: Checkov GitHub Action
         id: checkov
