Committing Checkov Workflows folder

--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           script: |
             const output = '${{ steps.checkov.outputs.checkov_output }}'
-            const octokit = require('@octokit/rest')()
+            const octokit = require('@octokit/rest')
             octokit.authenticate({
               type: 'token',
               token: process.env.CHECKOV_PR_TOKEN
