--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -27,15 +27,12 @@ jobs:
           CHECKOV_PR_TOKEN: ${{ secrets.CHECKOV_PR_TOKEN }}
         with:
           script: |
-            const output = '${{ steps.checkov.outputs.checkov_output }}'
-            const octokit = require('@octokit/rest')
-            octokit.authenticate({
-              type: 'token',
-              token: process.env.CHECKOV_PR_TOKEN
-            })
+            const output = '${{ steps.checkov.outputs.checkov_output }}';
+            const { Octokit } = require("@octokit/rest");
+            const octokit = new Octokit({ auth: process.env.CHECKOV_PR_TOKEN });
             octokit.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: 'Checkov Results:\n```\n' + output + '\n```'
-            })
+              issue_number: context.payload.pull_request.number,
+              body: `Checkov Results:\n\`\`\`\n${output}\n\`\`\``
+            });
